--- a/2018/join/style.css
+++ b/2018/join/style.css
@@ -95,8 +95,28 @@ section.editorial {
   color: #FFF;
 }
 
+section.editorial a {
+  color: #DDD;
+}
+
+section.editorial a:hover {
+  color: #AAA;
+}
+
 section.business {
   background-color: #EEE;
+  /* background: linear-gradient(rgba(238, 238, 238, 0.8), rgba(238, 238, 238, 0.8)), url('img/marketing.jpg'); */
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+section.business a {
+  color: #AA1E22;
+}
+
+section.business a:hover {
+  color: #777;
 }
 
 section.street {
@@ -105,6 +125,15 @@ section.street {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
+  color: #FFF;
+}
+
+section.street a {
+  color: #444;
+}
+
+section.street a:hover {
+  color: #000;
 }
 
 section.utb {
@@ -114,6 +143,14 @@ section.utb {
   background-size: cover;
   background-repeat: no-repeat;
   color: #FFF;
+}
+
+section.utb a {
+  color: #CCC;
+}
+
+section.utb a:hover {
+  color: #999;
 }
 
 section.why {
@@ -189,6 +226,10 @@ p.overall {
 .biz-tab.active {
   font-weight: 700;
   border-bottom: 3px solid #000;
+}
+
+.inline-link {
+  display: inline-block;
 }
 
 @media screen and (max-width: 1200px) {
