--- a/2018/join/style.css
+++ b/2018/join/style.css
@@ -87,7 +87,7 @@ section {
 section.intro {
   display: flex;
   justify-content: center;
-  background: linear-gradient(transparent, transparent, #000), url('img/main.jpeg');
+  background: linear-gradient(transparent, transparent, #000), url('https://snworksceo.imgix.net/dpn/0f26a007-001d-4745-8088-7db4e3297602.sized-1000x1000.jpeg');
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -96,7 +96,7 @@ section.intro {
 
 section.editorial {
   background-color: #AA1E22;
-  background: linear-gradient(rgba(170, 30, 34, 0.8), rgba(170, 30, 34, 0.8)), url('img/news.jpg');
+  background: linear-gradient(rgba(170, 30, 34, 0.8), rgba(170, 30, 34, 0.8)), url('https://snworksceo.imgix.net/dpn/917417c6-2a39-487a-bd75-8913f3427445.sized-1000x1000.jpg');
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -113,7 +113,7 @@ section.editorial a:hover {
 
 section.business {
   background-color: #EEE;
-  background: linear-gradient(rgba(238, 238, 238, 0.8), rgba(238, 238, 238, 0.8)), url('img/marketing.jpg');
+  background: linear-gradient(rgba(238, 238, 238, 0.8), rgba(238, 238, 238, 0.8)), url('https://snworksceo.imgix.net/dpn/5803b1e8-72a6-4810-9770-60123f4a066d.sized-1000x1000.jpg');
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -129,7 +129,7 @@ section.business a:hover {
 
 section.street {
   background-color: #44BFBF;
-  background: linear-gradient(rgba(68, 191, 191, 0.9), rgba(68, 191, 191, 0.9)), url('img/street.jpg');
+  background: linear-gradient(rgba(68, 191, 191, 0.9), rgba(68, 191, 191, 0.9)), url('https://snworksceo.imgix.net/dpn/a7c7d5b9-59ac-420c-bd26-cfd44d0e52d2.sized-1000x1000.jpg');
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -146,7 +146,7 @@ section.street a:hover {
 
 section.utb {
   background-color: #446CB3;
-  background: linear-gradient(rgba(68, 108, 179, 0.8), rgba(68, 108, 179, 0.8)), url('img/utb.jpg');
+  background: linear-gradient(rgba(68, 108, 179, 0.8), rgba(68, 108, 179, 0.8)), url('https://snworksceo.imgix.net/dpn/7a898e92-4b83-490a-831b-b04505bcb007.sized-1000x1000.jpg');
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
