--- a/2018/02/basketball-predictions/style.css
+++ b/2018/02/basketball-predictions/style.css
@@ -1,3 +1,37 @@
+@font-face {
+  font-family: 'Source Sans Pro';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Source Sans Pro Regular'), local('SourceSansPro-Regular'), url(https://fonts.gstatic.com/s/sourcesanspro/v11/6xK3dSBYKcSV-LCoeQqfX1RYOo3qOK7lujVj9w.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+@font-face {
+  font-family: 'Source Sans Pro';
+  font-style: normal;
+  font-weight: 600;
+  src: local('Source Sans Pro SemiBold'), local('SourceSansPro-SemiBold'), url(https://fonts.gstatic.com/s/sourcesanspro/v11/6xKydSBYKcSV-LCoeQqfX1RYOo3i54rwlxdu3cOWxw.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+@font-face {
+  font-family: 'Source Sans Pro';
+  font-style: normal;
+  font-weight: 300;
+  src: local('Source Sans Pro Light'), local('SourceSansPro-Light'), url(https://fonts.gstatic.com/s/sourcesanspro/v11/6xKydSBYKcSV-LCoeQqfX1RYOo3ik4zwlxdu3cOWxw.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+body {
+  font-family: 'Source Sans Pro', sans-serif;
+}
+
+h1, h2 {
+  font-weight: 300;
+  margin-top: 20px;
+  text-align: center;
+}
+
 th {
   text-align: center;
   color: #fff;
@@ -32,6 +66,12 @@ a.header-link {
   margin: auto;
 }
 
+.intro {
+  margin: auto;
+  width: 60%;
+  text-align: center;
+}
+
 .navbar {
   background-color: #011F5B;
 }
@@ -41,5 +81,30 @@ a.header-link {
 }
 
 .tr-top:hover {
-  background-color: #bc3a3e;
+  background-color: #AA1E22;
+}
+
+.select-gender {
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+.team-gender {
+  padding: 5px;
+  margin: 5px;
+}
+
+.team-gender.active {
+  border: 1px solid #011F5B;
+}
+
+@media screen and (max-width: 480px) {
+  h1 {
+    font-size: 2.1rem;
+  }
+
+  .intro {
+    width: auto;
+    text-align: left;
+  }
 }
