--- a/2018/03/march-madness/style.css
+++ b/2018/03/march-madness/style.css
@@ -1,35 +1,102 @@
-h1 {
-  font-family: 'Anton', sans-serif;
-  color: #9d2235;
-  text-align: center;
-  font-size: 50px;
+/* latin */
+@font-face {
+  font-family: 'Abel';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Abel Regular'), local('Abel-Regular'), url(https://fonts.gstatic.com/s/abel/v8/MwQ5bhbm2POE2V9BPbh5uGM.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+/* latin-ext */
+@font-face {
+  font-family: 'Anton';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Anton Regular'), local('Anton-Regular'), url(https://fonts.gstatic.com/s/anton/v9/1Ptgg87LROyAm3K9-C8CSKlvPfE.woff2) format('woff2');
+  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+}
+/* latin */
+@font-face {
+  font-family: 'Anton';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Anton Regular'), local('Anton-Regular'), url(https://fonts.gstatic.com/s/anton/v9/1Ptgg87LROyAm3Kz-C8CSKlv.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
 body {
   font-family: 'Abel', sans-serif;
   color: #002d72;
+  margin: 0;
 }
 
-.score-box, .twitter-feed {
-  border-style: solid;
-  margin: 10px;
+h1, h2, h3 {
+  font-family: 'Anton', sans-serif;
 }
 
+h1, h2, h4 {
+  margin: 0;
+  color: #fff;
+}
 
-.info {
-  padding: 20px;
+h1 {
+  text-transform: uppercase;
+  letter-spacing: 3px;
+  font-size: 50px;
+}
+
+h2 {
+  font-size: 40px;
+  letter-spacing: 2px;
+}
+
+h3 {
+  margin: 0;
+  font-size: 28px;
+}
+
+h4 {
+  font-size: 28px;
+}
+
+p {
+  font-size: 18px;
+}
+
+p.date {
+  margin: 0;
+}
+
+a {
+  text-decoration: none;
+  color: #002d72;
+}
+
+nav {
+  background-color: #002d72;
+  text-align: center;
+}
+
+nav img {
+  margin: 15px 0 10px 0;
+}
+
+hr {
+  margin: 40px 0;
+}
+
+.title-box {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-}
-
-.article-box {
-  display: flex;
-}
-
-.score-box {
-  width: 50%;
-  text-align:center;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  min-height: 50vh;
+  background-image: url('http://snworksceo.imgix.net/dpn/da17d027-5a86-4c0d-8975-90b57d4381a2.sized-1000x1000.jpg');
+  background-color: #9d2235;
+  background-blend-mode: multiply;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
   padding: 10px;
 }
 
@@ -38,37 +105,55 @@ body {
   justify-content: space-around;
 }
 
+.page-container {
+  margin: auto;
+  display: flex;
+}
+
+.articles {
+  width: 60%;
+  margin: 20px;
+}
+
+.live-updates {
+  background-color: #002d72;
+  position: sticky;
+  top: 0;
+  width: 40%;
+  height: calc(100vh - 100px);
+  padding: 50px;
+  text-align: center;
+}
+
 .twitter-feed {
   width: 100%;
-  height: 400px;
-  display: flex;
-  justify-content: center;
+  height: calc(100% - 209px);
 }
 
 #twitter-widget-0 {
-  height: 400px !important;
+  width: 100% !important;
+  height: 100% !important;
 }
 
-.page-container {
-  max-width: 1000px;
-  margin: auto;
+.article-box {
   display: flex;
-  flex-direction: column;
-  align-items: center;
 }
 
-.container {
-  width: 100%;
-}
-
-.article-box img {
-  width: 50%;
-  height: auto;
+.article-box:not(:last-of-type) {
+  margin-bottom: 20px;
 }
 
 .image {
   width: 50%;
   height: 300px;
+  margin-right: 15px;
+}
+
+.info {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 @media screen and (max-width: 480px) {
@@ -76,14 +161,34 @@ body {
     font-size: 40px;
   }
 
-  .score-box, .twitter-feed {
+  hr {
+    margin: 20px 0;
+  }
+
+  .page-container {
+    flex-wrap: wrap;
+    flex-direction: column-reverse;
+  }
+
+  .articles, .live-updates {
+    width: calc(100% - 40px);
+  }
+
+  .image, .info {
     width: 100%;
   }
 
-  .header-box {
-    flex-wrap: wrap;
+  .info {
+    margin-top: 10px;
   }
 
+  .article-box {
+    flex-direction: column;
+  }
 
-
+  .live-updates {
+    position: inherit;
+    height: calc(100vh - 40px);
+    padding: 20px;
+  }
 }
