fix mobile twitter embed height

--- a/2018/03/march-madness/style.css
+++ b/2018/03/march-madness/style.css
@@ -100,11 +100,6 @@ hr {
   padding: 10px;
 }
 
-.header-box {
-  display: flex;
-  justify-content: space-around;
-}
-
 .page-container {
   margin: auto;
   display: flex;
@@ -123,11 +118,14 @@ hr {
   height: calc(100vh - 100px);
   padding: 50px;
   text-align: center;
+  display: flex;
+  flex-direction: column;
 }
 
 .twitter-feed {
+  display: flex;
   width: 100%;
-  height: calc(100% - 209px);
+  height: 100%;
 }
 
 #twitter-widget-0 {
@@ -187,7 +185,7 @@ hr {
   }
 
   .live-updates {
-    position: inherit;
+    position: initial;
     height: calc(100vh - 40px);
     padding: 20px;
   }
