--- a/2018/03/march-madness/style.css
+++ b/2018/03/march-madness/style.css
@@ -112,6 +112,7 @@ hr {
 
 .live-updates {
   background-color: #002d72;
+  position: -webkit-sticky;
   position: sticky;
   top: 0;
   width: 40%;
