remove twitter on mobile because it wasn't cooperating

--- a/2018/03/march-madness/style.css
+++ b/2018/03/march-madness/style.css
@@ -189,7 +189,11 @@ hr {
 
   .live-updates {
     position: initial;
-    height: calc(100vh - 40px);
+    height: auto;
     padding: 20px;
+  }
+
+  .no-mobile {
+    display: none;
   }
 }
