--- a/2018/03/NEC/css/style.css
+++ b/2018/03/NEC/css/style.css
@@ -15,8 +15,20 @@ body {
 	background: #F9F9F9;
 }
 
-h1, h2, h3 {
+h1, h2, h3, h4 {
   text-align: center;
+}
+
+h4 {
+  color: #888;
+  font-weight: 400;
+  cursor: pointer;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 p {
@@ -40,6 +52,10 @@ footer {
   max-width: 1200px;
   margin: 20px auto;
   text-align: center;
+}
+
+.hidden {
+  display: none;
 }
 
 .navbar {
