added 90% of design

--- a/2018/04/alumni-elections/style.css
+++ b/2018/04/alumni-elections/style.css
@@ -1,6 +1,21 @@
+body {
+    font-family: 'Avenir Next';
+    text-align: center;
+    color: #333333;
+}
+
+h1 {
+  font-weight: 600;
+  font-size: 40px;
+}
+
+h2 {
+  font-weight: 500;
+  font-size: 30px;
+}
 .featured-img {
-    max-height: 200px;
-    max-width: 200px;
+    max-height: 150px;
+    max-width: 150px;
     width: auto;
     position: absolute;
     bottom: 0;
@@ -10,12 +25,13 @@
 
 .featured-bubble {
     border-radius: 50%;
-    height: 200px;
-    width: 200px;
+    height: 150px;
+    width: 150px;
     position: relative;
     display: flex;
     justify-content: center;
     flex-shrink: 0;
+    margin-left: 50px;
 }
 
 .bubble-img {
@@ -38,21 +54,21 @@
   margin: auto;
 }
 
-.curr-profile {
-  display: flex;
+.pa-curr-profile {
+
 }
 .cand-info {
   display: flex;
-  align-items: center;
+  justify-content: space-evenly;
+  width: inherit;
+  margin-top: 50px;
+  height: 80px;
 }
 
 .feat-name, .feat-office {
   font-size: 30px;
 }
 
-.basic-info {
-  margin: 15px;
-}
 
 .slick-track {
   height: 104px;
@@ -67,29 +83,105 @@
 
 
 .featured-slide {
-  height: 300px !important;
+  height: 200px !important;
   display: flex !important;
 }
 
-.all-candidates .slick-current .bubble {
+.all-candidates .slick-current .bubble, .pa-all-candidates .slick-current .bubble {
   border: 2px solid yellow;
 }
 
-.all-candidates {
+.all-candidates, .pa-all-candidates {
   width: calc(100% - 50px);
   margin: auto;
 }
 
+.intro {
+  padding-bottom: 20px;
+}
+
+.box {
+  width: 40px;
+  height: 40px;
+  margin: 10px;
+}
+
+.legend {
+  display: flex;
+  justify-content: space-evenly;
+  margin: 20px 0 20px 0;
+}
+
+.party-text {
+  display: flex;
+  align-items: center;
+  font-size: 25px;
+}
+
+.party-section  {
+  display: flex;
+}
+
+.dem-border, .rep-border, .uup-border {
+  border-style: solid;
+  border-width: 3px;
+}
+
 .democrat {
-  background-color: blue;
+  background-color: #00B6BD;
 }
 
 .republican {
-  background-color: red;
+  background-color: #EE645B;
 }
 
 .uup {
-  background-color: purple;
+  background-color: #81629C;
+}
+
+.dem-border {
+  border-color: #00B6BD;
+  background-color: #77CDD5;
+}
+
+.rep-border {
+  border-color: #EE645B;
+  background-color: #F69687;
+}
+
+.uup-border {
+  border-color: #81629C;
+  background-color: #AF86D3;
+}
+
+#pa-div, #other-div {
+  margin-top: 60px;
+}
+
+.name, .aff, .office {
+  text-align: left;
+}
+
+.v-line {
+  border-left: 1px solid #9B9B9B;
+}
+
+.label {
+  font-size: 20px;
+  color: #9B9B9B;
+}
+
+.text {
+  font-size: 25px;
+}
+
+hr {
+  width: 80%;
+  margin-top: 80px;
+}
+
+.name .text {
+  font-weight: 500;
 }
 
 /* .all-candidates {
