--- a/2018/04/sports-awards/style.css
+++ b/2018/04/sports-awards/style.css
@@ -4,8 +4,6 @@
 body {
   font-size: 1em;
   margin: 0;
-  font-family: 'Lato', sans-serif;
-  color: #000;
 }
 
 h1, h2, h3, h4, h5 {
@@ -16,12 +14,13 @@ h1, h2, h3, h4, h5 {
 
 p {
   font-family: 'minion-pro';
-  font-weight: 400;
+  font-weight: 600;
 }
 
 h1 {
   margin-bottom: 10px;
   font-size: 3rem;
+  text-align: center;
 }
 
 h2 {
@@ -93,7 +92,9 @@ section {
 section.intro {
   display: flex;
   justify-content: center;
-  background: linear-gradient(transparent, transparent, #000), url('https://snworksceo.imgix.net/dpn/0f26a007-001d-4745-8088-7db4e3297602.sized-1000x1000.jpeg');
+  background-image: url('https://snworksceo.imgix.net/dpn/cc3e689c-1fdc-4032-993c-d29ec8cf1e89.sized-1000x1000.jpg');
+  background-color: #011F5B;
+  background-blend-mode: soft-light;
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -102,11 +103,14 @@ section.intro {
 
 section.team {
   background-color: #AA1E22;
-  background: linear-gradient(rgba(170, 30, 34, 0.8), rgba(170, 30, 34, 0.8)), url('https://snworksceo.imgix.net/dpn/917417c6-2a39-487a-bd75-8913f3427445.sized-1000x1000.jpg');
+  background: url('https://snworksceo.imgix.net/dpn/917417c6-2a39-487a-bd75-8913f3427445.sized-1000x1000.jpg');
+  background-color: #990000;
+  background-blend-mode: soft-light;
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   color: #FFF;
+  padding: 0;
 }
 
 section.team a {
@@ -119,10 +123,13 @@ section.team a:hover {
 
 section.individual {
   background-color: #EEE;
-  background: linear-gradient(rgba(238, 238, 238, 0.8), rgba(238, 238, 238, 0.8)), url('https://snworksceo.imgix.net/dpn/5803b1e8-72a6-4810-9770-60123f4a066d.sized-1000x1000.jpg');
+  background-image: url('https://snworksceo.imgix.net/dpn/5803b1e8-72a6-4810-9770-60123f4a066d.sized-1000x1000.jpg');
+  background-color: #011F5B;
+  background-blend-mode: soft-light;
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
+  padding: 0;
 }
 
 section.individual a {
@@ -135,11 +142,15 @@ section.individual a:hover {
 
 section.moment {
   background-color: #44BFBF;
-  background: linear-gradient(rgba(68, 191, 191, 0.9), rgba(68, 191, 191, 0.9)), url('https://snworksceo.imgix.net/dpn/a7c7d5b9-59ac-420c-bd26-cfd44d0e52d2.sized-1000x1000.jpg');
+  background: url('https://snworksceo.imgix.net/dpn/a7c7d5b9-59ac-420c-bd26-cfd44d0e52d2.sized-1000x1000.jpg');
+  background-color: #990000;
+  background-blend-mode: soft-light;
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   color: #FFF;
+  padding: 0;
+    
 }
 
 section.moment a {
@@ -159,13 +170,21 @@ p.overall {
 }
 
 .intro-text {
-  color: #FFF;
+  color: #000;
   text-align: center;
-  align-self: flex-end;
   display: flex;
   flex-direction: column;
 }
 
+#eotya {
+    margin-top: 40px;
+    font-size: 80px;   
+}
+
+#introduction {
+    width: 50%;
+    margin:auto;
+}
 .section {
   width: 100%;
   margin-left: 0;
@@ -188,6 +207,10 @@ p.overall {
   display: flex;
   justify-content: center;
   margin-bottom: 10px;
+}
+
+.departments span h4 {
+    font-weight: 600;
 }
 
 .awardtypes {
@@ -216,7 +239,8 @@ p.overall {
   flex-grow: 1;
   display: flex;
   justify-content: center;
-  margin-bottom: 10px;
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
 
 .team-tab, .ind-tab, .mom-tab {
@@ -267,6 +291,8 @@ p.overall {
 
 .award-title {
     text-align: center;
+    font-weight: 600;
+    font-size: 65px;
 }
 
 .award-image {
@@ -283,6 +309,21 @@ p.overall {
     margin-left: 2%;
     display: inline-block;
     width: 45%;
+}
+
+.award-flex {
+    display: flex;
+    align-items: center;
+}
+
+.type {
+    background-color: #FFF;
+    color: #000;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    font-weight: 600;
+    font-size: 80px;
+    margin-bottom: 50px;
 }
 
 @media screen and (max-width: 1200px) {
